crates/oxc_react_compiler/tests/snapshots/jsx-outlining-with-non-jsx-children.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/jsx-outlining-with-non-jsx-children.js
---
import { c as _c } from "react/compiler-runtime";
// @enableJsxOutlining
function Component(t0) {
	const $ = _c(7);
	const { arr } = t0;
	const x = useX();
	let t1;
	if ($[0] !== arr || $[1] !== x) {
		let t2;
		if ($[3] !== x) {
			t2 = (i, id) => {
				const t3 = "Test";
				const T0 = _temp;
				return <T0 i={i} t={t3} k={i} key={id} x={x} />;
			};
			$[3] = x;
			$[4] = t2;
		} else {
			t2 = $[4];
		}
		t1 = arr.map(t2);
		$[0] = arr;
		$[1] = x;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	let t2;
	if ($[5] !== t1) {
		t2 = <>{t1}</>;
		$[5] = t1;
		$[6] = t2;
	} else {
		t2 = $[6];
	}
	return t2;
}
function _temp(t0) {
	let { "i": i, "t": t, "k": k, "x": x } = t0;
	return <Bar x={x}><Baz i={i}>{t}</Baz><Foo k={k} /></Bar>;
}
function Bar(t0) {
	const $ = _c(3);
	const { x, children } = t0;
	let t1;
	if ($[0] !== children || $[1] !== x) {
		t1 = <>{x}{children}</>;
		$[0] = children;
		$[1] = x;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
function Baz(t0) {
	const $ = _c(3);
	const { i, children } = t0;
	let t1;
	if ($[0] !== children || $[1] !== i) {
		t1 = <>{i}{children}</>;
		$[0] = children;
		$[1] = i;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
function Foo(t0) {
	const { k } = t0;
	return k;
}
function useX() {
	return "x";
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ arr: ["foo", "bar"] }]
};
