crates/oxc_react_compiler/tests/snapshots/jsx-reactive-local-variable-member-expr.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/jsx-reactive-local-variable-member-expr.tsx
---
import { c as _c } from "react/compiler-runtime";
import * as sharedRuntime from "shared-runtime";
function Component(t0) {
	const $ = _c(2);
	const { something } = t0;
	const Foo = something.StaticText1;
	let t1;
	if ($[0] !== Foo) {
		t1 = () => <Foo />;
		$[0] = Foo;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ something: sharedRuntime }]
};
