crates/oxc_react_compiler/tests/snapshots/jsx-string-attribute-expression-container.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/jsx-string-attribute-expression-container.js
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div><Text value={"\n"} /><Text value={"A	E"} /><Text value={"나은"} /><Text value="Lauren" /><Text value={"சத்யா"} /><Text value="Sathya" /><Text value={"welcome 👋"} /></div>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
function Text(t0) {
	const $ = _c(2);
	const { value } = t0;
	let t1;
	if ($[0] !== value) {
		t1 = <span>{value}</span>;
		$[0] = value;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
