crates/oxc_react_compiler/tests/snapshots/jsx-surrogate-entities.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/jsx-surrogate-entities.js
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div title={"\ud800"} pair={"😀"} mixed={"x\udc00y"}>{"\ud800"}{"&#xD800;"}{"😀 \ud83d \ude00"}</div>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
