crates/oxc_react_compiler/tests/snapshots/jsx-tag-evaluation-order.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/jsx-tag-evaluation-order.tsx
---
import { c as _c } from "react/compiler-runtime";
import { StaticText1, StaticText2 } from "shared-runtime";
function Component(props) {
	const $ = _c(3);
	const t0 = props.value;
	let t1;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = <StaticText2 />;
		$[0] = t1;
	} else {
		t1 = $[0];
	}
	let t2;
	if ($[1] !== t0) {
		t2 = <StaticText1>{t0}{t1}</StaticText1>;
		$[1] = t0;
		$[2] = t2;
	} else {
		t2 = $[2];
	}
	return t2;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: "string value 1" }],
	isComponent: true
};
